--- a/consultar.html
+++ b/consultar.html
@@ -63,7 +63,7 @@
       </div>
 
       <!-- Panel principal con las herramientas de búsqueda para visitantes -->
-      <div class="tab-content active">
+      <div class="tab-content active" id="visitantes-content">
         <div class="controls-area" data-controls="visitantes">
           <div class="controls-count">
             <span id="visitantes-total" class="count-pill" aria-live="polite">0 registros</span>
@@ -120,7 +120,7 @@
       </div>
 
       <!-- Panel con los listados y filtros para sesiones de descartes -->
-      <div class="tab-content">
+      <div class="tab-content" id="descartes-content">
         <!-- Vista que agrupa todas las sesiones registradas -->
         <section id="sesiones-lista">
           <div class="controls-area" data-controls="descartes">
